--- a/src/lib/components/controls/JSONPreview.scss
+++ b/src/lib/components/controls/JSONPreview.scss
@@ -1,16 +1,17 @@
-@import '../../styles';
+@use '../../styles';
+@use '../../themes/defaults';
 
 .jse-json-preview {
   flex: 1;
-  font-family: $font-family-mono;
-  font-size: $font-size-mono;
-  color: $panel-color-readonly;
+  font-family: defaults.$font-family-mono;
+  font-size: defaults.$font-size-mono;
+  color: defaults.$panel-color-readonly;
   overflow: auto;
   white-space: pre-wrap;
   padding: 2px;
 
   // TODO: JSONPreview shouldn't add borders I think
-  border-left: $main-border;
-  border-right: $main-border;
-  border-bottom: $main-border;
+  border-left: defaults.$main-border;
+  border-right: defaults.$main-border;
+  border-bottom: defaults.$main-border;
 }
