--- a/src/lib/components/modes/tablemode/ColumnHeader.scss
+++ b/src/lib/components/modes/tablemode/ColumnHeader.scss
@@ -1,7 +1,7 @@
-@import '../../../styles';
+@use '../../../styles';
 
 .jse-column-header {
-  @include jse-column-header-mixin;
+  @include styles.jse-column-header-mixin;
 
   span.jse-column-sort-icon {
     height: 1em;
