--- a/src/lib/components/modes/tablemode/RefreshColumnHeader.scss
+++ b/src/lib/components/modes/tablemode/RefreshColumnHeader.scss
@@ -1,5 +1,5 @@
-@import '../../../styles';
+@use '../../../styles';
 
 .jse-column-header {
-  @include jse-column-header-mixin;
+  @include styles.jse-column-header-mixin;
 }
