--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -1,12 +1,13 @@
-@import '../styles';
+@use '../styles';
+@use '../themes/defaults';
 
 .jse-main {
   width: 100%;
   height: 100%;
   min-width: 0;
-  min-height: $contents-min-height;
-  font-family: $font-family;
-  font-size: $font-size;
+  min-height: styles.$contents-min-height;
+  font-family: defaults.$font-family;
+  font-size: defaults.$font-size;
   line-height: normal;
   position: relative;
   display: flex;
@@ -14,7 +15,7 @@
 
   // lighter selection color when the editor doesn't have focus
   &:not(.jse-focus) {
-    --jse-selection-background-color: #{$selection-background-inactive-color};
-    --jse-context-menu-pointer-background: #{$context-menu-pointer-hover-background};
+    --jse-selection-background-color: #{defaults.$selection-background-inactive-color};
+    --jse-context-menu-pointer-background: #{defaults.$context-menu-pointer-hover-background};
   }
 }
