--- a/src/lib/components/controls/ColorPickerPopup.scss
+++ b/src/lib/components/controls/ColorPickerPopup.scss
@@ -1,10 +1,11 @@
-@import '../../styles';
+@use '../../styles';
+@use '../../themes/defaults';
 
 .jse-color-picker-popup {
   :global(.picker_wrapper.popup),
   :global(.picker_wrapper.popup .picker_arrow::before),
   :global(.picker_wrapper.popup .picker_arrow::after) {
-    background: $color-picker-background;
+    background: defaults.$color-picker-background;
     line-height: normal;
   }
 
@@ -13,20 +14,20 @@
   :global(.picker_editor input),
   :global(.picker_sample),
   :global(.picker_done button) {
-    box-shadow: $color-picker-border-box-shadow;
+    box-shadow: defaults.$color-picker-border-box-shadow;
   }
 
   :global(.picker_editor input) {
-    background: $background-color;
-    color: $text-color;
+    background: defaults.$background-color;
+    color: defaults.$text-color;
   }
 
   :global(.picker_done button) {
-    background: $button-background;
-    color: $button-color;
+    background: defaults.$button-background;
+    color: defaults.$button-color;
   }
 
   :global(.picker_done button:hover) {
-    background: $button-background-highlight;
+    background: defaults.$button-background-highlight;
   }
 }
