--- a/src/lib/components/modes/treemode/CollapsedItems.scss
+++ b/src/lib/components/modes/treemode/CollapsedItems.scss
@@ -1,21 +1,22 @@
-@import '../../../styles';
+@use '../../../styles';
+@use '../../../themes/defaults';
 
 div.jse-collapsed-items {
-  margin-left: calc(var(--level) * $indent-size);
+  margin-left: calc(var(--level) * defaults.$indent-size);
   $transparent-color: transparent;
-  $background-color: $collapsed-items-background-color;
-  $color: $collapsed-items-link-color;
+  $background-color: defaults.$collapsed-items-background-color;
+  $color: defaults.$collapsed-items-link-color;
 
-  font-family: $font-family;
-  font-size: $font-size;
+  font-family: defaults.$font-family;
+  font-size: defaults.$font-size;
   color: $color;
 
   // https://sharkcoder.com/visual/borders
   $size: 8px;
-  padding: $padding-half;
+  padding: styles.$padding-half;
   border: $size solid transparent;
   border-width: $size 0;
-  background-color: $contents-background-color;
+  background-color: defaults.$contents-background-color;
   background-image: linear-gradient($background-color, $background-color),
     linear-gradient(to bottom right, $transparent-color 50.5%, $background-color 50.5%),
     linear-gradient(to bottom left, $transparent-color 50.5%, $background-color 50.5%),
@@ -40,13 +41,13 @@ div.jse-collapsed-items {
   display: flex;
 
   &.jse-selected {
-    background-color: $selection-background-color;
-    --jse-collapsed-items-background-color: #{$collapsed-items-selected-background-color};
+    background-color: defaults.$selection-background-color;
+    --jse-collapsed-items-background-color: #{defaults.$collapsed-items-selected-background-color};
   }
 
   div.jse-text,
   button.jse-expand-items {
-    margin: 0 $padding-half;
+    margin: 0 styles.$padding-half;
   }
 
   div.jse-text {
@@ -66,7 +67,7 @@ div.jse-collapsed-items {
 
     &:hover,
     &:focus {
-      color: $collapsed-items-link-color-highlight;
+      color: defaults.$collapsed-items-link-color-highlight;
     }
   }
 }
