--- a/src/lib/components/modes/treemode/Welcome.scss
+++ b/src/lib/components/modes/treemode/Welcome.scss
@@ -1,20 +1,21 @@
-@import '../../../styles';
+@use '../../../styles';
+@use '../../../themes/defaults';
 
 .jse-welcome {
   flex: 1;
   overflow: auto;
-  font-family: $font-family;
-  font-size: $font-size;
+  font-family: defaults.$font-family;
+  font-size: defaults.$font-size;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  border-left: $main-border;
-  border-right: $main-border;
+  border-left: defaults.$main-border;
+  border-right: defaults.$main-border;
 
   &:last-child {
-    border-bottom: $main-border;
+    border-bottom: defaults.$main-border;
   }
 
   .jse-space.jse-before {
@@ -29,18 +30,18 @@
     display: flex;
     flex-direction: column;
     max-width: 300px;
-    margin: 2em $padding;
-    gap: $padding;
+    margin: 2em defaults.$padding;
+    gap: defaults.$padding;
 
     .jse-welcome-title {
     }
 
     .jse-welcome-info {
-      color: $panel-color-readonly;
+      color: defaults.$panel-color-readonly;
     }
 
     button {
-      @include jsoneditor-button-primary;
+      @include styles.jsoneditor-button-primary;
     }
   }
 }
