--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -1,17 +1,18 @@
-@import '../../../styles';
+@use '../../../styles';
+@use '../../../themes/defaults';
 
 .jse-color-picker-button {
-  font-size: $font-size-mono;
+  font-size: defaults.$font-size-mono;
 
-  width: $color-picker-button-size;
-  height: $color-picker-button-size;
+  width: defaults.$color-picker-button-size;
+  height: defaults.$color-picker-button-size;
   box-sizing: border-box;
   padding: 0;
-  margin: 2px 0 0 $padding-half;
+  margin: 2px 0 0 styles.$padding-half;
   display: inline-flex;
   vertical-align: top;
 
-  border: 1px solid $text-color;
+  border: 1px solid defaults.$text-color;
   border-radius: 2px;
   background: inherit;
   outline: none;
