--- a/src/lib/plugins/value/components/TimestampTag.scss
+++ b/src/lib/plugins/value/components/TimestampTag.scss
@@ -1,4 +1,5 @@
-@import '../../../styles';
+@use '../../../styles';
+@use '../../../themes/defaults';
 
 .jse-timestamp {
   padding: 0;
@@ -6,5 +7,5 @@
   vertical-align: middle;
   display: inline-flex;
 
-  color: $value-color-number;
+  color: defaults.$value-color-number;
 }
